Prevent the link around the logo from adding extra space

--- a/wordpress/wp-content/themes/mapaction/sass/_page_layout.scss
+++ b/wordpress/wp-content/themes/mapaction/sass/_page_layout.scss
@@ -58,6 +58,13 @@
 .site-branding-layout {
 	float: left;
 	margin-top: $gutter-size;
+	.site-logo a {
+		height: $logo-height;
+		display: block;
+		@media screen and (max-width: $three_column_min_width) {
+			height: $logo-height-small;
+		}
+	}
 	img {
 		height: $logo-height;
 		@media screen and (max-width: $three_column_min_width) {
